--- a/src/style.css
+++ b/src/style.css
@@ -108,9 +108,8 @@
   display: flex;
   transition: 0.3s;
 }
-.active {
-  left:: 0;
-  transition: 0.3s;
+.nav-menu:active {
+  left: 0;
 }
 .heading {
   font-size: 32px;
